# chartxcl

./: .gitignore  .travis.yml  404.html  README.md  deploy.sh  index.html  meson.build  meson_options.txt  package-lock.json  package.json
assets/css/: 0.styles.a5eda556.css
assets/js/: 10.a2a3c80c.js  11.48d248a9.js  12.cb6d5378.js  13.73908246.js  3.d01b0d36.js  4.596866a6.js  5.6d194bbe.js  6.96cd735f.js  7.28905c6f.js  8.341df341.js  9.cdde1a9b.js  app.7578aff4.js  vendors~flowchart.ccf3723a.js
data/: chartxcl.gresource.xml  meson.build
data/assets/glade/: menus.ui
docs/: README.md
docs/.vuepress/: config.js  enhanceApp.js
docs/.vuepress/nav/: en.js  zh.js
docs/zh/: README.md
docs/zh/document/: README.md
document/: index.html
download/: index.html
po/: LINGUAS  POTFILES.sh  meson.build
src/: chartxcl.deps  meson.build
tools/meson/: install.py
zh/: index.html
zh/document/: index.html
zh/download/: index.html
